--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   # firebase_messaging: ^6.0.15
+  shared_preferences: ^0.5.12+4
   firebase_messaging: ^7.0.3
-  flutter_local_notifications: ^1.4.3
+  flutter_local_notifications: ^3.0.2
 
 
 dev_dependencies:
